[gd_scene load_steps=13 format=3 uid="uid://bjiq8dr6fey8c"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_yc2re"]
[ext_resource type="Texture2D" uid="uid://dya6510vyus7r" path="res://sprites/Player_Base.png" id="2_flowi"]
[ext_resource type="Material" uid="uid://bh2g40q1m751a" path="res://effects/particles/explosion.tres" id="3_7phfd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1o00d"]
radius = 20.0

[sub_resource type="Animation" id="Animation_j35f6"]
length = 0.001

[sub_resource type="Animation" id="Animation_3liha"]
resource_name = "damage_taken"
length = 2.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rmyn0"]
_data = {
"RESET": SubResource("Animation_j35f6"),
"damage_taken": SubResource("Animation_3liha")
}

[sub_resource type="Curve" id="Curve_t8qft"]
max_value = 3.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_lvkvb"]
max_value = 25.0
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 25), 50.0, -30.0, 0, 1]
point_count = 2

[sub_resource type="Curve" id="Curve_sipfn"]
max_value = 3.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_7d2gl"]
curve_x = SubResource("Curve_t8qft")
curve_y = SubResource("Curve_lvkvb")
curve_z = SubResource("Curve_sipfn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_webmy"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0, -2000, 0)
emission_shape_scale = Vector3(1000, 1, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 500, 0)
scale_min = 5.0
scale_max = 5.0
scale_over_velocity_max = 750.0
scale_over_velocity_curve = SubResource("CurveXYZTexture_7d2gl")
color = Color(1, 0.509804, 0.509804, 0.333333)

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_mask = 12
script = ExtResource("1_yc2re")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_flowi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1o00d")

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rmyn0")
}

[node name="FirePosition" type="Node2D" parent="."]
position = Vector2(0, -15)

[node name="Explosion" type="GPUParticles2D" parent="."]
process_mode = 3
emitting = false
amount = 100
process_material = ExtResource("3_7phfd")
one_shot = true
explosiveness = 1.0
randomness = 0.1

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)
editor_draw_limits = true

[node name="SpeedTrails" type="GPUParticles2D" parent="."]
amount = 30
amount_ratio = 0.5
process_material = SubResource("ParticleProcessMaterial_webmy")
lifetime = 5.0

[connection signal="finished" from="Explosion" to="." method="_on_gpu_particles_2d_finished"]
